# rest-api-fuzzer

./: .gitignore  README.md  pyproject.toml
exemplos/: config.json  config_string.json  consistencia_config.json  rest-faults.json  template.json  vapi.json  vapi_template.json  vul.json
rest_api_fuzzer/: config.py  data_generator.py  main.py
