[tool.poetry]
name = "rest-api-fuzzer"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
requests = "^2.31.0"
rich = "^13.7.0"
termcolor = "^2.4.0"
pyyaml = "^6.0.1"
aiohttp = "^3.9.3"
tqdm = "^4.66.1"
matplotlib = "^3.8.3"



[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
